# gajim

./: .hgignore  .travis.yml  Makefile  TODO.osx  autogen.sh  configure.ac  extra.mk.in  gdk-quartz-keychange.diff  setup.cfg
.github/workflows/: pythonapp.yml
Gajim.app/Contents/: Info.plist
data/: Makefile
data/activities/: Makefile
data/activities/default/: Makefile
data/emoticons/: Makefile
data/glade/: Makefile  message_window.glade  preferences_window.glade  single_message_window.glade
data/gui/: splash_screen.ui
data/iconsets/: Makefile
data/iconsets/goojim/48x48/: Makefile
data/iconsets/nuvola/: Makefile
data/iconsets/transports/: Makefile
data/iconsets/transports/icq/: Makefile
data/iconsets/transports/msn/32x32/: Makefile
data/iconsets/transports/sms/: Makefile
data/moods/: Makefile
data/other/: Makefile
data/pixmaps/: Makefile
data/pixmaps/dock_icns/: away.icns  chat.icns  connecting.icns  dnd.icns  event.icns  invisible.icns  offline.icns  online.icns  xa.icns
data/pixmaps/events/: Makefile
data/sounds/: Makefile
gajim/: chat_control.py  chat_control_base.py  gajim.py  groupchat_control.py  gui_interface.py  gui_menu_builder.py  roster_window.py  session.py
gajim/common/: app.py  config.py  connection.py  events.py
gajim/common/modules/: __init__.py  chat_markers.py  message.py
gajim/gtk/: accounts.py
mac/: gajim.spec  makebundle.py
scripts/: Makefile  gajim-remote.in  gajim.in
src/: Makefile  chat_control.py  config.py  dialogs.py  dock.py  features_window.py  gajim-remote.py  gajim.py  gtkgui_helpers.py  gui_interface.py  network_manager_listener.py  normal_control.py  notify.py  roster_window.py  statusicon.py
src/command_system/: Makefile
src/command_system/implementation/: Makefile
src/common/: Makefile  caps.py  caps_cache.py  config.py  configpaths.py  dbus_support.py  defs.py  helpers.py  pep.py  sleepy.py  socks5.py
src/common/idle_c/: Makefile
src/common/xmpp/: Makefile  idlequeue.py  transports_nb.py
src/common/zeroconf/: Makefile
src/osx/: Makefile  __init__.py
src/osx/growl/: Makefile
src/osx/growl/growlImage_m/: Makefile  _growlImage.m
src/osx/growl/growl_c/: Makefile  _growl.c
src/osx/idle_c/: Makefile
src/osx/nsapp_m/: Makefile  nsapp.h  nsapp.m
src/osx/syncmenu/: Makefile  test-menu.c
src/osx/syncmenu/syncmenu/: Makefile  __init__.py
src/osx/syncmenu/syncmenu_c/: Makefile  pysyncmenu.c  syncmenu.c
src/spellmodule/: Makefile
src/trayiconmodule/: Makefile
src/traymodule/: Makefile
